--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.8.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "localforage": "^1.10.0",
@@ -30,6 +32,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
